Trying to fix overlapping description text

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -314,6 +314,7 @@ body {
   line-height: 1.28;
   font-size: 16px;
   max-height: calc(1.28em * 2);
+  padding-block: 1rem;
 }
 
 .t-icons {
